<resources>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">Home</string>
    <string name="app_name">Mini Project</string>
    <string name="Identity">I am a</string>
    <string name="Student">FRCRCE Student</string>
    <string name="Alumni">FRCRCE Alumni</string>
    <string name="StudLogin">Student Login</string>
    <string name="Email">Enter official Email-id : </string>
    <string name="Hint_Mail">crce.roll.ce@gmail.com</string>
    <string name="Password">Enter your Password : </string>
    <string name="hint_psw">Password</string>
    <string name="Or">OR</string>
    <string name="Login">Login</string>
    <string name="Alumni_Signup">Alumni Signup</string>
    <string name="Hint_Alumni_Mail">alucrce.id.ce@gmail.com</string>
    <string name="Signup">Signup</string>
    <string name="Already">Already have an account ? Login</string>
    <string name="AluLogin">Alumni Login</string>
    <string name="Group_name">FRCRCE Forum</string>
    <string name="Msg_Hint">Type a message</string>
    <string name="Logout">Logout</string>
    <string name="events">List of Events</string>
    <string name="hintEnter_event">Enter the event</string>
    <string name="Add_Event">Save Event</string>
    <string name="select">Select Resource</string>
    <string name="Change_Dp">Change the photo\n</string>
    <string name="Edit_username">Edit the username</string>
</resources>